--- a/src/CSS/Sidebar.css
+++ b/src/CSS/Sidebar.css
@@ -5,8 +5,27 @@
 .ds_side_bg{
     background: rgba(1, 1, 4, 1);
     min-height: 100vh;
-    height: 100%;
+    height: 950px;
+    overflow-y: auto;
 }
+
+.ds_side_bg::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .ds_side_bg::-webkit-scrollbar-track {
+    background: #121a24;
+    border-radius: 4px;
+  }
+  
+  .ds_side_bg::-webkit-scrollbar-thumb {
+    background: #94a3b4;
+    border-radius: 4px;
+  }
+  
+  .ds_side_bg::-webkit-scrollbar-thumb:hover {
+    background: #394857;
+  }
 
 .ds_active_color {
     position: relative;
@@ -27,6 +46,7 @@
 }
 .ds_side_off_main{
     background: rgba(1, 1, 4, 1);
+    width: 300px;
 }
 .ds_side_off_main .offcanvas-header .btn-close{
     background-image: url(../Images/dhruvin/cancel.svg);
@@ -56,5 +76,12 @@
     .ds_side_main {
         width: 100%;
         min-width: 250px;
+    }
+}
+
+@media (max-width:992px) {
+    .ds_side_off_main{
+        background: rgba(1, 1, 4, 1);
+        width: 280px;
     }
 }
