--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,6 +1,6 @@
 .V_outlet_back {
     background: linear-gradient(180deg, #050614 0%, #000101 88.37%);
-    height: 822px;
+    height: 873px;
 }
 
 .V_title {
@@ -25,7 +25,7 @@
 }
 
 .V_thead {
-    padding: 20px;
+    padding: 14px;
     text-align: center;
 }
 
@@ -62,7 +62,122 @@
     padding-top: 6px;
 }
 
-/* ================ media query ================ */
+.V_add_button {
+    border: 1px solid white;
+    border-radius: 6px;
+    font-family: Inter;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+
+.V_label {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    color: #C6C6C6E5;
+}
+
+.V_label1 {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 18px;
+    color: #C6C6C6E5;
+}
+
+.V_add_input {
+    background: #171F28;
+    color: white;
+    width: 100%;
+    height: 44px;
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    gap: 10px;
+}
+
+.V_add_input1 {
+    background: #171F28;
+    color: white;
+    width: 100%;
+    height: 25px;
+    border-radius: 4px;
+}
+.V_add_input1:focus-visible {
+    outline: none;
+}
+
+.V_add_input:focus-visible {
+    outline: none;
+}
+
+.V_white_button {
+    border-radius: 4px;
+    gap: 10px;
+    padding: 10px 40px;
+    background: #FFFFFF;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+}
+
+.V_black_button {
+    border-radius: 4px;
+    border-width: 0.3px;
+    border: 0.3px solid;
+
+    border-image: radial-gradient(80.38% 222.5% at -13.75% -12.36%, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%)
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+        ,
+        radial-gradient(80.69% 208.78% at 108.28% 112.58%, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%)
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+    ;
+    backdrop-filter: blur(12.156224250793457px);
+
+
+
+    padding: 10px 40px;
+    color: white;
+    gap: 8px;
+    font-weight: 600;
+    font-size: 16px;
+    text-align: center;
+    background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.0447917) 77.08%, rgba(255, 255, 255, 0) 100%)
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+    ;
+}
+
+.V_review {
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.V_rview_modal {
+    background: #0C1118;
+
+}
+
+.V_review_modal_width .modal-content {
+    width: 65%;
+    margin: auto;
+}
+
+.V_homecorousel_image {
+    width: 30px;
+    height: 30px;
+}
+
+.V_choose_image_button {
+    font-weight: 400;
+    font-size: 12px;
+    text-align: center;
+    color: #000000;
+    border-radius: 6px;
+}
+
+/* =============== media query ================ */
 
 
 @media (max-width: 1921px) and (min-width: 1651px) {}
@@ -73,10 +188,70 @@
 
 @media (max-width: 1199px) and (min-width: 992px) {}
 
-@media (max-width: 991px) and (min-width: 768px) {}
+@media (max-width: 991px) and (min-width: 768px) {
+    .V_title {
+        font-size: 24px;
+    }
 
-@media (max-width: 767px) and (min-width: 576px) {}
+    .V_review_modal_width .modal-content {
+        width: 68%;
+        margin: auto;
+    }
+}
 
-@media (max-width: 575px) and (min-width: 481px) {}
+@media (max-width: 767px) and (min-width: 576px) {
+    .V_title {
+        font-size: 24px;
+    }
 
-@media (max-width: 480px) and (min-width: 320px) {}
+    .V_review_modal_width .modal-content {
+        width: 70%;
+        margin: auto;
+    }
+
+    .V_his_first {
+        font-size: 18px;
+    }
+
+    .V_his_second {
+        font-size: 18px;
+    }
+}
+
+@media (max-width: 575px) and (min-width: 481px) {
+    .V_title {
+        font-size: 20px;
+    }
+
+    .V_review_modal_width .modal-content {
+        width: 70%;
+        margin: auto;
+    }
+
+    .V_his_first {
+        font-size: 16px;
+    }
+
+    .V_his_second {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 480px) and (min-width: 320px) {
+    .V_title {
+        font-size: 20px;
+    }
+
+    .V_review_modal_width .modal-content {
+        width: 93%;
+        margin: auto;
+    }
+
+    .V_his_first {
+        font-size: 14px;
+    }
+
+    .V_his_second {
+        font-size: 14px;
+    }
+}
