--- a/src/CSS/Sidebar.css
+++ b/src/CSS/Sidebar.css
@@ -5,8 +5,11 @@
 .ds_side_bg{
     background: rgba(1, 1, 4, 1);
     min-height: 100vh;
-    height: 950px;
+    position: absolute;
+    height: 100%;
+    /* height: 950px; */
     overflow-y: auto;
+    min-width: 300px;
 }
 
 .ds_side_bg::-webkit-scrollbar {
@@ -75,6 +78,9 @@
 @media (max-width:992px) {
     .ds_side_main {
         width: 100%;
+        min-width: 250px;
+    }
+    .ds_side_bg {
         min-width: 250px;
     }
 }
