--- a/src/CSS/Review.css
+++ b/src/CSS/Review.css
@@ -1,30 +1,35 @@
 .V_review_btn {
     background: #ffffff;
     border-radius: 5px;
-    padding: 8px 25px;
+    padding: 8px 20px;
     border: none;
     font-size: 18px;
     font-weight: 600;
-  }
-  .V_review_bg{
-      background: #171F28;
-      height: 650px;
-      border-radius: 5px;
-  }
-  .V_review_table thead tr th , td {
-      padding: 15px 30px;
-      text-align: center;
-  }
-  .V_review_table thead tr th{
-      border-bottom: 0.8px solid #C6C6C64D;
-  }
-  .V_review_icon{
-      background-color: white;
-      padding: 3px 5px 5px 5px;
-      border-radius: 3px;
-  }
+}
 
-  .V_pagination {
+.V_review_bg {
+    background: #171F28;
+    height: 650px;
+    border-radius: 5px;
+}
+
+.V_review_table thead tr th,
+td {
+    padding: 15px 30px;
+    text-align: center;
+}
+
+.V_review_table thead tr th {
+    border-bottom: 0.8px solid #C6C6C64D;
+}
+
+.V_review_icon {
+    background-color: white;
+    padding: 3px 5px 5px 5px;
+    border-radius: 3px;
+}
+
+.V_pagination {
     font-size: 13px;
     width: 32px;
     height: 32px;
@@ -49,4 +54,148 @@
 .V_pagination.disabled {
     opacity: 0.5;
     pointer-events: none;
+}
+
+
+.V_modal_header {
+    border: 0px;
+}
+
+.V_label {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    color: #C6C6C6E5;
+}
+
+.V_input_text_for_all {
+    width: 100%;
+    height: 44px;
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-right: 30px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+    gap: 10px;
+    background: #171F28;
+    color: white;
+    border: none;
+}
+
+.V_input_text_for_all:focus-visible {
+    border: 0px;
+    outline: none;
+}
+
+.V_save {
+    font-weight: 600;
+    font-size: 14px;
+    background: #FFFFFF;
+    color: black;
+    border: none;
+    border-radius: 6px;
+}
+
+.V_clear {
+    font-weight: 600;
+    font-size: 14px;
+    background: radial-gradient(90.16% 143.01% at 15.32% 21.04%, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.0447917) 77.08%, rgba(255, 255, 255, 0) 100%)
+        /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
+    ;
+    border: none;
+    color: white;
+    border-radius: 6px;
+}
+
+.V_label2 {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 18px;
+    color: rgba(198, 198, 198, 1);
+}
+
+.V_label1 {
+    font-family: Inter; 
+    font-weight: 500;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ================ media query ================ */
+
+
+@media (max-width: 1921px) and (min-width: 1651px) {}
+
+@media (max-width: 1650px) and (min-width: 1441px) {}
+
+@media (max-width: 1440px) and (min-width: 1200px) {}
+
+@media (max-width: 1199px) and (min-width: 992px) {
+    .V_input_text_for_all {
+        height: 40px;
+    }
+}
+
+@media (max-width: 991px) and (min-width: 769px) {
+    .V_modal_width .modal-dialog {
+        width: 90%;
+        margin: auto auto;
+    }
+
+    .V_input_text_for_all {
+        height: 40px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 576px) {
+    .V_modal_width .modal-dialog {
+        width: 90%;
+        margin: auto;
+    }
+
+    .V_input_text_for_all {
+        height: 35px;
+    }
+}
+
+@media (max-width: 575px) and (min-width: 481px) {
+    .V_modal_width .modal-dialog {
+        width: 90%;
+        margin: auto;
+    }
+
+    .V_input_text_for_all {
+        height: 35px;
+    }
+}
+
+@media (max-width: 480px) and (min-width: 320px) {
+    .V_modal_width .modal-dialog {
+        width: 90%;
+        margin: auto;
+    }
+
+    .V_input_text_for_all {
+        height: 35px;
+    }
+    .V_label2 {
+        font-size: 14px;
+    }
+    
+    .V_label1 {
+        font-size: 16px;
+    }
 }
