--- a/src/CSS/Review.css
+++ b/src/CSS/Review.css
@@ -118,7 +118,7 @@ td {
 .V_label1 {
     font-family: Inter; 
     font-weight: 500;
-    font-size: 20px;
+    font-size: 18px;
     color: rgba(255, 255, 255, 1);
 }
 
@@ -193,14 +193,32 @@ td {
     height: 120px;
 }
 
+.ds_sub_select1{
+    background: rgba(23, 31, 40, 1);
+    color: white;
+    border: none;
+    padding: 5px 15px;
+}
 /* ================ media query ================ */
 
 
-@media (max-width: 1921px) and (min-width: 1651px) {}
+@media (max-width: 1921px) and (min-width: 1651px) {
+    .ds_sub_select1{
+        padding: 10px 15px;
+    }
+}
 
-@media (max-width: 1650px) and (min-width: 1441px) {}
+@media (max-width: 1650px) and (min-width: 1441px) {
+    .ds_sub_select1{
+        padding: 10px 15px;
+    }
+}
 
-@media (max-width: 1440px) and (min-width: 1200px) {}
+@media (max-width: 1440px) and (min-width: 1200px) {
+    .ds_sub_select1{
+        padding: 10px 15px;
+    }
+}
 
 @media (max-width: 1199px) and (min-width: 992px) {
     .V_input_text_for_all {
@@ -208,6 +226,9 @@ td {
     }
     .custom-input-group{
         height: 40px;
+    }
+    .ds_sub_select1{
+        padding: 8px 15px;
     }
 }
 
@@ -226,6 +247,9 @@ td {
     .V_castCrew_image{
         width: 100px;
         height: 100px;
+    }
+    .ds_sub_select1{
+        padding: 8px 15px;
     }
 }
 
@@ -278,6 +302,6 @@ td {
     }
     
     .V_label1 {
-        font-size: 16px;
+        font-size: 14px;
     }
 }
